--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </address>
         </div>
 
-                <div class="ftr second">
+                <div class="ftr">
      <h2 class="ftr-text">ПРИСОЕДИНЯЙТЕСЬ</h2>
             <ul class="list social-icons">
                 <li class="social-icons-item">
