--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <li class="social-icons-item">
                                 <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                                     <svg class="icon">
-                                        <use href="../images/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -196,7 +196,7 @@
                             <li class="social-icons-item">
                                 <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                                     <svg class="icon">
-                                        <use href="../images/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -233,7 +233,7 @@
                             <li class="social-icons-item">
                                 <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                                     <svg class="icon">
-                                        <use href="../images/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -335,7 +335,7 @@
                 <li class="social-icons-item">
                     <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                         <svg class="icon white">
-                            <use href="../images/sprite.svg#icon-instagram"></use>
+                            <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
